# python-schema-validation-libs

./: 01_schema_definition.py  02_validation_definition.py  03_serialization.py  README.md  example.py  pyproject.toml
